# nfs-rs

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
examples/: simple_server.rs
src/: config.rs  error.rs  lib.rs  rpc.rs  server.rs  vfs.rs  xdr.rs
src/proto/: mod.rs  nfs4.rs
tests/: interop_compound_tests.rs  nfs4_proto_tests.rs  putfh_tests.rs  vfs_tests.rs  xdr_rpc_tests.rs
